@@ -1,1 +1,3 @@
 - lib: "syscall" access method
+
+- pci.ids: "Unknown mass storage controller" -> "Mass storage controller".
