@@ -1,6 +1,4 @@
 /*
- *	$Id: i386-ports.c,v 1.3 2002/03/30 15:39:25 mj Exp $
- *
  *	The PCI Library -- Direct Configuration access via i386 Ports
  *
  *	Copyright (c) 1997--1999 Martin Mares <mj@ucw.cz>
