@@ -1,6 +1,4 @@
 /*
- *	$Id: setpci.c,v 1.12 2002/03/30 15:39:24 mj Exp $
- *
  *	Linux PCI Utilities -- Manipulate PCI Configuration Registers
  *
  *	Copyright (c) 1998 Martin Mares <mj@ucw.cz>
